The new LookupTable class is 100% complete and works great. It was used to replace all 4D and 5D double precision lookup tables.  These were observed to be sparse structures that mostly hold zero values. The new lookup tables store only the non-zero values.
A few methods in tensor.cpp were modified to avoid excess new/delete memory operations.

The result:  memory usage per MPI process is down to ~200MB from 7.3GB (a 97.2% reduction!).  Runtimes seems to be ~8-10% faster.

--- a/makefile_scc
+++ b/makefile_scc
@@ -14,19 +14,15 @@ FC=mpif90
 F90=mpif90
 CC=mpicxx
 CXX=mpicxx
-# Optimizations: add support for a few SIMD 
-# instructions, likely to improve performance. 
-# This can be used once development is further along as they
-# increase the compile time
-#OPT_FLAGS= -qopenmp -msse4.2 -axAVX  -O3 -no-prec-div -fp-model fast=2
-# More regular optimization flags:
-OPT_FLAGS= -qopenmp -g -O3
+# Straightforward optimization flags:
+OPT_FLAGS= -qopenmp -O3  
+EXTRA_LDFLAGS=
 FFLAGS=${OPT_FLAGS}
 F90FLAGS=${OPT_FLAGS}
 CFLAGS=${OPT_FLAGS}
 CCFLAGS=${OPT_FLAGS}
-CXXFLAGS=${OPT_FLAGS}
- 
+CXXFLAGS=${OPT_FLAGS} -std=c++11 -Ilut -I.
+
 
 
 all: main_mpi
@@ -37,7 +33,8 @@ debug: FFLAGS= ${DEBUG_FLAGS}
 debug: F90FLAGS= ${DEBUG_FLAGS}
 debug: CFLAGS= ${DEBUG_FLAGS}
 debug: CCFLAGS= ${DEBUG_FLAGS}
-debug: CXXFLAGS= ${DEBUG_FLAGS}
+debug: CXXFLAGS= ${DEBUG_FLAGS}  -std=c++11 -Ilut -I.
+debug: EXTRA_LDFLAGS=
 debug: main_mpi
 
 
@@ -45,19 +42,15 @@ debug: main_mpi
 # executable as well.  MKLROOT is defined when the intel/2021.1 module
 # is loaded.  Same with $SCC_INTEL_LIB. -rpath lets the executable find
 # the libraries without needing to load the intel module.
-LDFLAGS=   -Wl,-rpath=${SCC_INTEL_LIB} -L${MKLROOT}/lib/intel64 -Wl,-rpath=${MKLROOT}/lib/intel64
-# and the libraries to link against
-# tbbmalloc_proxy is an Intel memory allocator - it forces memory allocations to be
-# aligned on 64-bit memory addresses which is good for performance. It also is multi-threaded
-# and improves memory allocation speed with OpenMP threads.
+LDFLAGS=  -Wl,-rpath=${SCC_INTEL_LIB} -L${MKLROOT}/lib/intel64 -Wl,-rpath=${MKLROOT}/lib/intel64
 LIBS= -lmpi_cxx -lmkl_lapack95_lp64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lstdc++ -nofor-main 
  
 
 
 main_mpi: main_mpi.o tensor.o tensor_su2.o su2bond.o su2struct.o ran.o sort2.o dmrg_su2.o \
-          dmrg_su2_mpi.o lanczos_su2.o permutation_operator.o
+          dmrg_su2_mpi.o lanczos_su2.o permutation_operator.o lut/LookupTable.o
 	${F90} ${F90FLAGS} -o $@ $< tensor.o tensor_su2.o su2bond.o su2struct.o ran.o sort2.o dmrg_su2.o \
-          dmrg_su2_mpi.o lanczos_su2.o permutation_operator.o ${LDFLAGS} ${LIBS} 
+          dmrg_su2_mpi.o lanczos_su2.o permutation_operator.o LookupTable.o ${EXTRA_LDFLAGS} ${LDFLAGS} ${LIBS} 
 
 
 clean:
